--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Interactive Charts</h1>
     <ul>
-        <li><a href="chart1.html">Chart 1: Voting Breakdown</a></li>
-        <li><a href="chart2.html">Chart 2: Election Results</a></li>
-        <li><a href="chart3.html">Chart 3: Favorability Trends</a></li>
+        <li><a href="updated_chart1.html">Chart 1: Voting Breakdown</a></li>
+        <li><a href="updated_chart2.html">Chart 2: Election Results</a></li>
+        <li><a href="updated_chart3.html">Chart 3: Favorability Trends</a></li>
     </ul>
 </body>
 </html>
